--- a/ProyectoFinal_WebApps_web/web/principal.html
+++ b/ProyectoFinal_WebApps_web/web/principal.html
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>PÃ¡gina Principal</title>
+        <title>P&aacute;gina Principal</title>
         <link rel="stylesheet" href="stylePrincipal.css">
         <script src="https://kit.fontawesome.com/d1149c8381.js" crossorigin="anonymous"></script>
     </head>
