--- a/ProyectoFinal_WebApps_web/web/RegistroDeCuenta.html
+++ b/ProyectoFinal_WebApps_web/web/RegistroDeCuenta.html
@@ -56,10 +56,11 @@
                     <input name="BotonCrearCuenta" type="selector" value="Elegir" style="margin-left:30%;">
                 </fieldset>
                 <input name="BotonCrearCuenta" type="submit" value="Crear Cuenta">
-                <input name="BotonCancelar" type="submit" value="Cancelar">
                 <br><br>
-                </section>
             </form>
+            <a href="Login.html">
+                <input name="BotonCancelar" type="submit" value="Cancelar"  style="width: 80%; margin-left: 10%;">
+            </a>
         </section>
     </body>
 
