Birth date and user gender now saves properly

--- a/ProyectoFinal_WebApps_web/web/RegistroDeCuenta.html
+++ b/ProyectoFinal_WebApps_web/web/RegistroDeCuenta.html
@@ -45,9 +45,9 @@
                 <fieldset class="radio_button">
                     <label style="padding-bottom:10%;">Sexo</label>
                     <br>
-                    <input type="radio" name="sexo" id="hombre">
+                    <input type="radio" name="sexo" id="hombre" value="Hombre" checked="checked"/>
                     <label for="hombre">Hombre</label>
-                    <input type="radio" name="sexo" id="mujer">
+                    <input type="radio" name="sexo" id="mujer" value="Mujer"/>
                     <label for="mujer">Mujer</label>
                 </fieldset>
                 <fieldset class="image_selector">
