--- a/ProyectoFinal_WebApps_web/web/RegistroDeCuenta.html
+++ b/ProyectoFinal_WebApps_web/web/RegistroDeCuenta.html
@@ -43,11 +43,9 @@
                     <span></span>
                 </fieldset>
                 <fieldset class="radio_button">
-                    <label style="padding-bottom:10%;">Sexo</label>
-                    <br>
-                    <input type="radio" name="sexo" id="hombre">
+                    <input type="radio" name="sexo" id="hombre" value="Hombre" checked="checked"/>
                     <label for="hombre">Hombre</label>
-                    <input type="radio" name="sexo" id="mujer">
+                    <input type="radio" name="sexo" id="mujer" value="Mujer">
                     <label for="mujer">Mujer</label>
                 </fieldset>
 
