--- a/ProyectoFinal_WebApps_web/web/Login.html
+++ b/ProyectoFinal_WebApps_web/web/Login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Inicio de Sesi&oacute;n</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <section name="FormularioLogin" class="center">
