--- a/ProyectoFinal_WebApps_web/web/RegistroDeCuenta.html
+++ b/ProyectoFinal_WebApps_web/web/RegistroDeCuenta.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Registro de Cuenta</title>
-        <link rel="stylesheet" href="styleRegistro.css">
+        <link rel="stylesheet" href="css/styleRegistro.css">
     </head>
 
     <body>
