--- a/ProyectoFinal_WebApps_web/web/RegistroDeCuenta.html
+++ b/ProyectoFinal_WebApps_web/web/RegistroDeCuenta.html
@@ -47,12 +47,15 @@
                     <label for="hombre">Hombre</label>
                     <input type="radio" name="sexo" id="mujer" value="Mujer">
                     <label for="mujer">Mujer</label>
+                    <br><br>
                 </fieldset>
-
+                <fieldset>
+                    <input type="checkbox" id="admin" name="admin"  >
+                    <label for="admin">Cuenta administradora</label><br>
+                </fieldset>
                 <fieldset class="image_selector">
                     <label for="formFileSm" class="form-label">Foto de perfil</label>
                     <input id="formFileSm" class="form-control form-control-sm" name="logotipo" type="file" accept="image/*"  required> 
-
                     <br>
                 </fieldset>
                 <input name="BotonCrearCuenta" type="submit" value="Crear Cuenta">
