--- a/ProyectoFinal_WebApps_web/web/Login.html
+++ b/ProyectoFinal_WebApps_web/web/Login.html
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Inicioasdad de Sesi&oacute;n</title>
+        <title>Inicio de Sesi&oacute;n</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
